consistent spacing and border on issue input form

--- a/shared/ui/styles/codemark-form.less
+++ b/shared/ui/styles/codemark-form.less
@@ -21,6 +21,8 @@
 
 	.input-text {
 		background: rgba(0, 0, 0, 0.1) !important;
+		border: 1px solid @base-border-color !important;
+		margin-bottom: 5px;
 	}
 
 	.connect-issue {
